# gna

./: Cargo.toml  README.md
src/: client.rs  clipboard.rs  common.rs  config.rs  main.rs  server.rs
