[package]
name = "gna"
version = "1.1.1"
description = "A simple tool to sync clipboard"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arboard = "2.1.1"
serde = { version = "1.0", features = ["derive"] }
bincode = "1.0"
serde_json = "1.0"
clap = { version = "3.2.20", features = ["derive"] }
notify-rust = "4"
uuid = { version = "1.1.2", features = ["v4", "fast-rng", "macro-diagnostics"]}
message-io = "0.14.6"